add cv upload file + view social media buttons

--- a/app/client/views/admin/users/users.html
+++ b/app/client/views/admin/users/users.html
@@ -210,10 +210,26 @@
         </div>
 
         <div class="actions">
-          <div class="ui positive right labeled icon button">
-            Nothing
-            <i class="checkmark icon"></i>
-          </div>
+
+          <a target="_blank" href="{{selectedUser.profile.github}}" class="ui github right labeled icon button">
+            View GitHub
+            <i class="github icon"></i>
+          </a>
+
+          <a target="_blank" href="{{selectedUser.profile.facebook}}" class="ui facebook right labeled icon button">
+            View Facebook
+            <i class="facebook icon"></i>
+          </a>
+
+          <a target="_blank" href="{{selectedUser.profile.linkedin}}" class="ui linkedin right labeled icon button">
+            View Linkedin
+            <i class="linkedin icon"></i>
+          </a>
+
+          <a target="_blank" href="{{selectedUser.profile.cvLink}}" class="ui positive right labeled icon button">
+            View Resume
+            <i class="search icon"></i>
+          </a>
         </div>
       </div>
 
