--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -151,11 +151,12 @@
         <div class="divided title"> Skills & Accomplishments </div>
 
         <div class="field">
-          <label>* CV </label>
-          <input type="text"
-                 name="cvLink"
-                 placeholder="https://drive.com/foobar"
-                 ng-model="user.profile.cvLink">
+          <label>* Skill Sheet PDF Only</label>
+          <p>
+            Upload a document outlining any skills or experience you'd like to share (ex. resume). PDF Only!
+          </p>
+          <input id="cv" type="file" class="ui pink button" accept="application/pdf" name="file"/>
+
         </div>
 
         <div class="field">
